refactor: Re-generate the sample file
The previous sample is too small.


Former-commit-id: ede59d75ea885e38b4fced0df6d836ef9ef6f0de

--- a/Wrangle-OpenStreetMap-Data/OpenStreetMap+Project+-+Chicago.ipynb
+++ b/Wrangle-OpenStreetMap-Data/OpenStreetMap+Project+-+Chicago.ipynb
@@ -38,22 +38,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "I will use the extract-sample-data.py file to extract the data."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -69,6 +53,31 @@
     "import lxml\n",
     "import cerberus\n",
     "from collections import defaultdict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I will use the extract-sample-data.py file to extract the data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 loop, best of 3: 3min 30s per loop\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "%run extract-sample-data.py"
    ]
   },
   {
@@ -436,7 +445,9 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "mapping = {\"St\": \"Street\",\n",
@@ -508,7 +519,9 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "update_file(sample_file)"
@@ -517,7 +530,9 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "LOWER_COLON = re.compile(r'^([a-z]|_)+:([a-z]|_)+')\n",
