feat: Run the k-attributes-issues.py
Former-commit-id: 2821b87846459c46932164cfdda8476ba8889ae4

--- a/Wrangle-OpenStreetMap-Data/OpenStreetMap+Project+-+Chicago.ipynb
+++ b/Wrangle-OpenStreetMap-Data/OpenStreetMap+Project+-+Chicago.ipynb
@@ -27,19 +27,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Extract a sample"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "As mentioned before, this database is quite large, more than 2GB. Directly opening it or parsing it will crash the computer. Therefore, it is a good idea to extract a sample from this dataset. "
+    "## Import Libraries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -59,7 +52,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I will use the extract-sample-data.py file to extract the data."
+    "## Extract a sample"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As mentioned before, this database is quite large, more than 2GB. Directly opening it or parsing it will crash the computer. Therefore, it is a good idea to extract a sample from this dataset. \n",
+    "\n",
+    "I will use the extract-sample-data.py file to extract 1% of the original data. This only needs to run once. The final sample file is around 20MB."
    ]
   },
   {
@@ -84,99 +86,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I will write a function to find element I want from the original .osm file, and write into a sample osm file.\n",
-    "After reading through the wiki, I think the most important tag for this dataset are \"node\", \"way\", and \"relation\" tag. Therefore, the function will focus on getting the elements from these three tags."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "osm_file = 'chicago_illinois.osm'\n",
-    "sample_file = 'sample_chicago.osm'\n",
-    "\n",
-    "tag = ['node', 'way', 'relation']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def get_element(osm_file, tags=('node', 'way', 'relation')):\n",
-    "    '''\n",
-    "    This function will read an XML file, get the element from desired tags.\n",
-    "\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    osm_file: .xml or .osm file\n",
-    "        the XML or OSM file to be parsed\n",
-    "\n",
-    "    tags: string or list\n",
-    "        the tag name that you want to get elements from.\n",
-    "        default is ['node', 'way', 'relation']\n",
-    "\n",
-    "    Return\n",
-    "    ------\n",
-    "    .xml or .osm file\n",
-    "    '''\n",
-    "\n",
-    "    context = iter(ET.iterparse(osm_file, events=('start', 'end')))\n",
-    "    _, root = next(context)\n",
-    "\n",
-    "    for event, elem in context:\n",
-    "        if (event == 'end') and (elem.tag in tags):\n",
-    "            yield elem\n",
-    "            root.clear()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "After generate the elements, it is time to write it into another file.\n",
-    "\n",
-    "k is a parameter. It defines the one element to export for every k elements. The bigger the k is, the smaller the sample will be. Since the data is big, I choose to use 1000."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "k = 1000\n",
-    "    \n",
-    "with open(sample_file, 'wb') as output:\n",
-    "    output.write(bytes('<?xml version=\"1.0\" encoding=\"UTF-8\"?>\\n', 'UTF-8'))\n",
-    "    output.write(bytes('<osm>\\n  ', 'UTF-8'))\n",
-    "\n",
-    "    for i, element in enumerate(get_element(osm_file)):\n",
-    "        if i % k == 0:\n",
-    "            output.write(ET.tostring(element, encoding='utf-8'))\n",
-    "\n",
-    "    output.write(bytes('</osm>', 'UTF-8'))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "After getting the sample from the database, it is a good idea to see the big picture of this sample to see if we have had enough data within the sample. Therefore, I want to write a function to check what tags are in the sample dataset, and how many of them."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "sample_file = 'sample_chicago.osm'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -195,22 +121,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'member': 69,\n",
-       " 'nd': 10728,\n",
-       " 'node': 8718,\n",
+       "{'member': 349,\n",
+       " 'nd': 103077,\n",
+       " 'node': 87172,\n",
        " 'osm': 1,\n",
-       " 'relation': 5,\n",
-       " 'tag': 6761,\n",
-       " 'way': 1233}"
+       " 'relation': 48,\n",
+       " 'tag': 67876,\n",
+       " 'way': 12337}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,10 +162,11 @@
     "\n",
     "Through reading the documente and look through the sample data in a text editor, `<tag>` is used to save all the values. \n",
     "\n",
-    "Here are some problems I noticed the following potential problems through reading the data:\n",
+    "Here are some problems I noticed the following potential problems through reading the sample data:\n",
     "\n",
     "* The `<tag>`'s k attribute value is not consistent. Some only have lower case like \"ele\". Some have both lower case and colon, like \"gnis: id\". Others have special characters like.\n",
-    "* The street name is not consistent. Some uses the whole spell, like \"street\" and \"avenue\", while others use abbreviation, like \"St\" and \"St.\"."
+    "* The street name is not consistent. Some uses the whole spell, like \"street\" and \"avenue\", while others use abbreviation, like \"Ave\".\n",
+    "* The phone number format is not consistent. Some have (XXX) XXX-XXXX while others have XXX-XXX-XXXX."
    ]
   },
   {
@@ -248,79 +175,36 @@
    "source": [
     "### k attribute issue\n",
     "\n",
-    "I will use regular expression to find the pattern that mentioned above. Later, I will define a function to count each pattern in the sample file."
+    "The k-attribute has three main patterns:\n",
+    "\n",
+    "* The k-attribute values only contain lowercase letter, i.e. \"building\".\n",
+    "* The k-attribute values contains both lowercase letter and colon, i.e. \"addr: city\".\n",
+    "* The problematic pattern will contains special characters like \"&\".'\n",
+    "* The rest will be \"others\".\n",
+    "\n",
+    "The first two patterns and \"others\" are good. They will not influence future analysis. However, the third one needs some clean-up. I will run the k_attrib_type.py file to find the patterns within my sample file."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "lower = re.compile(r'^([a-z]|_)*$')\n",
-    "lower_colon = re.compile(r'^([a-z]|_)*:([a-z]|_)*$')\n",
-    "problemchars = re.compile(r'[=\\+/&<>;\\'\"\\?%#$@\\,\\. \\t\\r\\n]')\n",
-    "keys = {\"lower\": 0, \"lower_colon\": 0, \"problemchars\": 0, \"other\": 0}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def key_type(filename, keys):\n",
-    "    '''\n",
-    "    This function will read through the k element and return its catogory\n",
-    "\n",
-    "    Parameters\n",
-    "    ---\n",
-    "    filename: .xml or .osm file\n",
-    "        the file that is going to be analyzed\n",
-    "    keys: a dictionary\n",
-    "        a dictionary to show the catogory\n",
-    "\n",
-    "    Return\n",
-    "    ---\n",
-    "    the updated keys(a dictionary)\n",
-    "    '''\n",
-    "    for event, element in ET.iterparse(filename):\n",
-    "        if element.tag == 'tag':\n",
-    "            key = element.get('k')\n",
-    "            if lower.search(key):\n",
-    "                keys['lower'] += 1\n",
-    "            elif re.findall(lower_colon, key):\n",
-    "                keys['lower_colon'] += 1\n",
-    "            elif re.findall(problemchars, key):\n",
-    "                keys['problemchars'] += 1\n",
-    "            else:\n",
-    "                keys['other'] += 1\n",
-    "\n",
-    "    return keys"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'lower': 2016, 'lower_colon': 3135, 'other': 1610, 'problemchars': 0}"
+       "{'lower': 20677, 'lower_colon': 31308, 'other': 15891, 'problemchars': 0}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "key_type(sample_file, keys)"
+    "%run \"k-attribute-issues.py\"\n",
+    "\n",
+    "k_attrib_type(sample_file, keys)"
    ]
   },
   {
