--- a/Wrangle-OpenStreetMap-Data/OpenStreetMap+Project+-+Chicago.ipynb
+++ b/Wrangle-OpenStreetMap-Data/OpenStreetMap+Project+-+Chicago.ipynb
@@ -213,7 +213,7 @@
    "source": [
     "### Street name issue\n",
     "\n",
-    "Similar to k attribute, I will use regular expression to find the pattern about street type. I will build up a list showing the expected value, and printed street type not in the expected list."
+    "Many of the street name in this file use abbreviation. For example, it uses 'Dr' instead of 'Drive'. It may causes problems in later analysis. Therefore, I need to find abbreviation and fix them."
    ]
   },
   {
@@ -312,6 +312,56 @@
    "source": [
     "audit(sample_file)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Phone Number Issues"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The phone number in this .osm file is not consistent. After looking through a small sample of this file, I found at least four kinds of format. Some phone numbers look like \"XXX-XXX-XXXX\", some look like \"(XXX) XXX-XXXX\", some look like \"+1-XXX-XXX-XXXX\" while others look like \"(XXX)XXX-XXXX\". There might be other formats as well. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
