feat: Run audit-street-types.py
Run the file to get the abbreviation in the file.


Former-commit-id: f4c70d4a9e4b809171652ed67a0f1b8b11712210

--- a/Wrangle-OpenStreetMap-Data/OpenStreetMap+Project+-+Chicago.ipynb
+++ b/Wrangle-OpenStreetMap-Data/OpenStreetMap+Project+-+Chicago.ipynb
@@ -218,99 +218,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "street_type_re = re.compile(r'\\b\\S+\\.?$', re.IGNORECASE)\n",
-    "expected = [\"Street\", \"Avenue\", \"Boulevard\", \"Drive\", \"Court\", \"Place\", \"Square\", \"Lane\", \"Road\", \n",
-    "            \"Trail\", \"Parkway\", \"Commons\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def audit_street_type(street_types, street_name):\n",
-    "    '''\n",
-    "    This function find the street_name that doesn't match the expected list\n",
-    "\n",
-    "    Parameters\n",
-    "    ---\n",
-    "    street_types: a dictionary\n",
-    "        it is a dictionary that contains the unique key of street types\n",
-    "    street_name: strings\n",
-    "        the street name found in .xml or .osm file\n",
-    "\n",
-    "    Return\n",
-    "    ---\n",
-    "    None\n",
-    "    '''\n",
-    "    match = street_type_re.search(street_name)\n",
-    "    if match:\n",
-    "        street_type = match.group(0)\n",
-    "        if street_type not in expected:\n",
-    "            street_types[street_type].add(street_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def audit(filename):\n",
-    "    '''\n",
-    "    This function will read a file and print the street types\n",
-    "\n",
-    "    Parameters\n",
-    "    ---\n",
-    "    filename: .xml or .osm file\n",
-    "\n",
-    "    Return\n",
-    "    ---\n",
-    "    street_types dictionary\n",
-    "    '''\n",
-    "    street_types = defaultdict(set)\n",
-    "\n",
-    "    for event, elem in ET.iterparse(filename, events=(\"start\",)):\n",
-    "        if elem.tag == \"node\" or elem.tag == \"way\":\n",
-    "            for tag in elem.iter(\"tag\"):\n",
-    "                if tag.attrib['k'] == 'addr:street':\n",
-    "                    audit_street_type(street_types, tag.attrib['v'])\n",
-    "    return street_types"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "defaultdict(set,\n",
-       "            {'Ave': {'New York Ave'},\n",
-       "             'Dr': {'Breckenridge Dr'},\n",
+       "            {'14': {'U.S. 14'},\n",
+       "             'Ave': {'Alabama Ave', 'New York Ave'},\n",
+       "             'Ave.': {'Ogden Ave.'},\n",
+       "             'B': {'South Avenue B'},\n",
+       "             'Broadway': {'North Broadway'},\n",
+       "             'C': {'South Avenue C'},\n",
+       "             'C405': {'S Williams St #C405'},\n",
+       "             'Circle': {'Woodland Park Circle'},\n",
+       "             'Ct': {'Boulder Ct', 'Timber Ct', 'Vail Ct'},\n",
+       "             'Dr': {'Breckenridge Dr',\n",
+       "              'Greenbriar Dr',\n",
+       "              'Gregory M Sears Dr',\n",
+       "              'John M Boor Dr',\n",
+       "              'Summit Dr'},\n",
        "             'E': {'South Avenue E'},\n",
-       "             'Highway': {'Lincoln Highway'}})"
+       "             'F': {'South Avenue F'},\n",
+       "             'G': {'South Avenue G'},\n",
+       "             'H': {'South Avenue H'},\n",
+       "             'Highway': {'Lincoln Highway', 'North Northwest Highway'},\n",
+       "             'J': {'South Avenue J'},\n",
+       "             'L': {'South Avenue L'},\n",
+       "             'Ln': {'Leadville Ln'},\n",
+       "             'M': {'South Avenue M'},\n",
+       "             'N': {'900 N', 'South Avenue N'},\n",
+       "             'O': {'South Avenue O'},\n",
+       "             'Park': {'West Midway Park'},\n",
+       "             'Path': {'Shining Moon Path'},\n",
+       "             'St': {'Kathleen St', 'Tipperary St', 'Towne St'},\n",
+       "             'Terrace': {'Colfax Terrace',\n",
+       "              'Harvard Terrace',\n",
+       "              'Hull Terrace',\n",
+       "              'North Edgebrook Terrace',\n",
+       "              'North Geneva Terrace'},\n",
+       "             'West': {'Ginny Lane West', 'North Lincoln Park West'}})"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "audit(sample_file)"
+    "%run \"audit-street-types.py\"\n",
+    "\n",
+    "audit_street_types(sample_file)"
    ]
   },
   {
