feat: Run audit-street-types.py for street and phone attribute
Former-commit-id: a407aebd4fd88a6d6882c24937c808ec6084b5e5

--- a/Wrangle-OpenStreetMap-Data/OpenStreetMap+Project+-+Chicago.ipynb
+++ b/Wrangle-OpenStreetMap-Data/OpenStreetMap+Project+-+Chicago.ipynb
@@ -211,14 +211,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Street name issue\n",
+    "Based on this result, there is no problematic characters within k attributes. Therefore, we do not need to clean k attribute for future analysis."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### v attribute issue\n",
+    "\n",
+    "The v-attribute contains the value for k-attribute. \n",
     "\n",
     "Many of the street name in this file use abbreviation. For example, it uses 'Dr' instead of 'Drive'. It may causes problems in later analysis. Therefore, I need to find abbreviation and fix them."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -261,15 +270,47 @@
        "             'West': {'Ginny Lane West', 'North Lincoln Park West'}})"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "%run \"audit-street-types.py\"\n",
+    "%run audit-street-types.py\n",
     "\n",
-    "audit_street_types(sample_file)"
+    "street_type_re = re.compile(r'\\b\\S+\\.?$', re.IGNORECASE)\n",
+    "expected = ['Street', 'Avenue', 'Boulevard', 'Drive', 'Court', 'Place',\n",
+    "            'Square', 'Lane', 'Road', 'Trail', 'Parkway', 'Commons']\n",
+    "\n",
+    "v_attrib_types(sample_file, \"addr:street\", street_type_re, expected)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(set,\n",
+       "            {'(312) 369-7900': {'(312) 369-7900'},\n",
+       "             '(708) 749-0895': {'(708) 749-0895'},\n",
+       "             '(847)434-0300': {'(847)434-0300'},\n",
+       "             '(847)806-1230': {'(847)806-1230'},\n",
+       "             '+1-708-715-7746': {'+1-708-715-7746'}})"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "phone_type_re = re.compile(r'(\\+1-)?\\(?\\d\\d\\d\\)?[-| ]?\\d\\d\\d[-| ]?\\d\\d\\d\\d')\n",
+    "expected = re.compile(r'^\\d\\d\\d-\\d\\d\\d-\\d\\d\\d\\d$')\n",
+    "\n",
+    "v_attrib_types(sample_file, \"phone\", phone_type_re, expected)"
    ]
   },
   {
