--- a/Wrangle-OpenStreetMap-Data/OpenStreetMap+Project+-+Chicago.ipynb
+++ b/Wrangle-OpenStreetMap-Data/OpenStreetMap+Project+-+Chicago.ipynb
@@ -228,10 +228,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 115,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -241,7 +239,6 @@
        "             'Ave': {'Alabama Ave', 'New York Ave'},\n",
        "             'Ave.': {'Ogden Ave.'},\n",
        "             'B': {'South Avenue B'},\n",
-       "             'Broadway': {'North Broadway'},\n",
        "             'C': {'South Avenue C'},\n",
        "             'C405': {'S Williams St #C405'},\n",
        "             'Circle': {'Woodland Park Circle'},\n",
@@ -255,7 +252,6 @@
        "             'F': {'South Avenue F'},\n",
        "             'G': {'South Avenue G'},\n",
        "             'H': {'South Avenue H'},\n",
-       "             'Highway': {'Lincoln Highway', 'North Northwest Highway'},\n",
        "             'J': {'South Avenue J'},\n",
        "             'L': {'South Avenue L'},\n",
        "             'Ln': {'Leadville Ln'},\n",
@@ -263,34 +259,48 @@
        "             'N': {'900 N', 'South Avenue N'},\n",
        "             'O': {'South Avenue O'},\n",
        "             'Park': {'West Midway Park'},\n",
-       "             'Path': {'Shining Moon Path'},\n",
-       "             'St': {'Kathleen St', 'Tipperary St', 'Towne St'},\n",
-       "             'Terrace': {'Colfax Terrace',\n",
-       "              'Harvard Terrace',\n",
-       "              'Hull Terrace',\n",
-       "              'North Edgebrook Terrace',\n",
-       "              'North Geneva Terrace'},\n",
-       "             'West': {'Ginny Lane West', 'North Lincoln Park West'}})"
+       "             'St': {'Kathleen St', 'Tipperary St', 'Towne St'}})"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "%run audit-street-types.py\n",
+    "%run update-v-value.py\n",
     "\n",
     "street_type_re = re.compile(r'\\b\\S+\\.?$', re.IGNORECASE)\n",
     "expected = ['Street', 'Avenue', 'Boulevard', 'Drive', 'Court', 'Place',\n",
-    "            'Square', 'Lane', 'Road', 'Trail', 'Parkway', 'Commons']\n",
+    "            'Square', 'Lane', 'Road', 'Trail', 'Parkway', 'Commons', 'Broadway', 'Circle'\n",
+    "           'Park', 'Path', 'Terrace', 'West', 'Highway']\n",
     "\n",
-    "v_attrib_types(sample_file, \"addr:street\", street_type_re, expected)"
+    "street_type = v_attrib_types(sample_file, \"addr:street\", street_type_re, expected)\n",
+    "street_type"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "street_mapping = {\n",
+    "    'Ave': 'Avenue',\n",
+    "    'Ave.': 'Avenue',\n",
+    "    'St': 'Street',\n",
+    "    'St.': 'Street',\n",
+    "    'Ln': 'Lane',\n",
+    "    'Dr': 'Drive',\n",
+    "    'Ct': 'Court' \n",
+    "}\n",
+    "\n",
+    "update_v_value(street_type, 'addr:street', mapping)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +314,7 @@
        "             '+1-708-715-7746': {'+1-708-715-7746'}})"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,8 +323,41 @@
     "phone_type_re = re.compile(r'(\\+1-)?\\(?\\d\\d\\d\\)?[-| ]?\\d\\d\\d[-| ]?\\d\\d\\d\\d')\n",
     "expected = re.compile(r'^\\d\\d\\d-\\d\\d\\d-\\d\\d\\d\\d$')\n",
     "\n",
-    "v_attrib_types(sample_file, \"phone\", phone_type_re, expected)"
+    "phone_type = v_attrib_types(sample_file, \"phone\", phone_type_re, expected)\n",
+    "phone_type"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "%run update-v-value.py\n",
+    "\n",
+    "phone_mapping = re.comp\n",
+    "update_v_value(phone_type, \"phone\", phone_mapping)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
