refactor: re-run update-v-value.py

--- a/Wrangle-OpenStreetMap-Data/OpenStreetMap+Project+-+Chicago.ipynb
+++ b/Wrangle-OpenStreetMap-Data/OpenStreetMap+Project+-+Chicago.ipynb
@@ -228,7 +228,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'South Avenue L'"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "street_mapping = {\n",
+    "    'Ave': 'Avenue',\n",
+    "    'Ave.': 'Avenue',\n",
+    "    'St': 'Street',\n",
+    "    'St.': 'Street',\n",
+    "    'Ln': 'Lane',\n",
+    "    'Dr': 'Drive',\n",
+    "    'Ct': 'Court' \n",
+    "}\n",
+    "\n",
+    "update_street_value(street_type, street_mapping)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +292,7 @@
        "             'St': {'Kathleen St', 'Tipperary St', 'Towne St'}})"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 178,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,32 +305,12 @@
     "            'Square', 'Lane', 'Road', 'Trail', 'Parkway', 'Commons', 'Broadway', 'Circle'\n",
     "           'Park', 'Path', 'Terrace', 'West', 'Highway']\n",
     "\n",
-    "street_type = v_attrib_types(sample_file, \"addr:street\", street_type_re, expected)\n",
-    "street_type"
+    "audit(sample_file, \"addr:street\", street_type_re, expected)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "street_mapping = {\n",
-    "    'Ave': 'Avenue',\n",
-    "    'Ave.': 'Avenue',\n",
-    "    'St': 'Street',\n",
-    "    'St.': 'Street',\n",
-    "    'Ln': 'Lane',\n",
-    "    'Dr': 'Drive',\n",
-    "    'Ct': 'Court' \n",
-    "}\n",
-    "\n",
-    "update_v_value(street_type, 'addr:street', mapping)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -311,53 +321,23 @@
        "             '(708) 749-0895': {'(708) 749-0895'},\n",
        "             '(847)434-0300': {'(847)434-0300'},\n",
        "             '(847)806-1230': {'(847)806-1230'},\n",
-       "             '+1-708-715-7746': {'+1-708-715-7746'}})"
+       "             '+1-708-715-7746': {'+1-708-715-7746'},\n",
+       "             '219-988-2111': {'+1 219-988-2111'}})"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 181,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "%run update-v-value.py\n",
+    "\n",
     "phone_type_re = re.compile(r'(\\+1-)?\\(?\\d\\d\\d\\)?[-| ]?\\d\\d\\d[-| ]?\\d\\d\\d\\d')\n",
     "expected = re.compile(r'^\\d\\d\\d-\\d\\d\\d-\\d\\d\\d\\d$')\n",
     "\n",
-    "phone_type = v_attrib_types(sample_file, \"phone\", phone_type_re, expected)\n",
-    "phone_type"
+    "audit(sample_file, \"phone\", phone_type_re, expected)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "%run update-v-value.py\n",
-    "\n",
-    "phone_mapping = re.comp\n",
-    "update_v_value(phone_type, \"phone\", phone_mapping)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
