feat: Run process_map and generate four csv files

--- a/Wrangle-OpenStreetMap-Data/OpenStreetMap+Project+-+Chicago.ipynb
+++ b/Wrangle-OpenStreetMap-Data/OpenStreetMap+Project+-+Chicago.ipynb
@@ -228,36 +228,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'South Avenue L'"
-      ]
-     },
-     "execution_count": 129,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "street_mapping = {\n",
-    "    'Ave': 'Avenue',\n",
-    "    'Ave.': 'Avenue',\n",
-    "    'St': 'Street',\n",
-    "    'St.': 'Street',\n",
-    "    'Ln': 'Lane',\n",
-    "    'Dr': 'Drive',\n",
-    "    'Ct': 'Court' \n",
-    "}\n",
-    "\n",
-    "update_street_value(street_type, street_mapping)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 178,
    "metadata": {},
    "outputs": [
@@ -360,14 +330,15 @@
    },
    "outputs": [],
    "source": [
-    "mapping = {\"St\": \"Street\",\n",
-    "           \"St.\": \"Street\",\n",
-    "           \"Ave\": 'Avenue',\n",
-    "           'Rd.': 'Road',\n",
-    "           'Dr': 'Drive',\n",
-    "           'E': 'East',\n",
-    "           'Highway': 'Highway'\n",
-    "            }"
+    "street_mapping = {\n",
+    "    'Ave': 'Avenue',\n",
+    "    'Ave.': 'Avenue',\n",
+    "    'St': 'Street',\n",
+    "    'St.': 'Street',\n",
+    "    'Ln': 'Lane',\n",
+    "    'Dr': 'Drive',\n",
+    "    'Ct': 'Court' \n",
+    "}"
    ]
   },
   {
@@ -378,153 +349,32 @@
    },
    "outputs": [],
    "source": [
-    "def update_name(name, mapping):\n",
-    "    '''\n",
-    "    This function will update the name based on the given mapping\n",
-    "\n",
-    "    Parameters:\n",
-    "    ---\n",
-    "    name: the unexpected street name found in the file\n",
-    "    mapping: the mapping for updating the name\n",
-    "\n",
-    "    Return:\n",
-    "    the updated name\n",
-    "    '''\n",
-    "    update_name = name.split(' ')[-1]\n",
-    "    if update_name in mapping:\n",
-    "        new_name = mapping[update_name]\n",
-    "\n",
-    "        name = name.replace(update_name, new_name)\n",
-    "\n",
-    "    return name"
+    "fix_street_errors()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 195,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def update_file(filename):\n",
-    "    '''\n",
-    "    This function will bring audit() and update_name() functions together to\n",
-    "    update the street names to make them consistenct\n",
-    "\n",
-    "    Parameters\n",
-    "    ---\n",
-    "    filename: the .xml or .osm file that needs to be updated\n",
-    "\n",
-    "    Return\n",
-    "    ---\n",
-    "    the updated file\n",
-    "    '''\n",
-    "    street_types = audit(filename)\n",
-    "    for street_type, ways in street_types.items():\n",
-    "        for name in ways:\n",
-    "            name = update_name(name, mapping)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "update_file(sample_file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "LOWER_COLON = re.compile(r'^([a-z]|_)+:([a-z]|_)+')\n",
-    "PROBLEMCHARS = re.compile(r'[=\\+/&<>;\\'\"\\?%#$@\\,\\. \\t\\r\\n]')\n",
-    "\n",
-    "# Make sure the fields order in the csvs matches the column order in the sql table schema\n",
     "NODE_FIELDS = ['id', 'lat', 'lon', 'user', 'uid', 'version', 'changeset', 'timestamp']\n",
     "NODE_TAGS_FIELDS = ['id', 'key', 'value', 'type']\n",
     "WAY_FIELDS = ['id', 'user', 'uid', 'version', 'changeset', 'timestamp']\n",
     "WAY_TAGS_FIELDS = ['id', 'key', 'value', 'type']\n",
     "WAY_NODES_FIELDS = ['id', 'node_id', 'position']\n",
     "\n",
-    "\n",
-    "def shape_element(element, node_attr_fields=NODE_FIELDS, way_attr_fields=WAY_FIELDS,\n",
-    "                  problem_chars=PROBLEMCHARS, default_tag_type='regular'):\n",
-    "    \"\"\"Clean and shape node or way XML element to Python dict\"\"\"\n",
-    "\n",
-    "    node_attribs = {}\n",
-    "    way_attribs = {}\n",
-    "    way_nodes = []\n",
-    "    tags = []  # Handle secondary tags the same way for both node and way elements\n",
-    "    # YOUR CODE HERE\n",
-    "    if element.tag == 'node':\n",
-    "        for item in NODE_FIELDS:\n",
-    "            node_attribs[item] = element.get(item)\n",
-    "        for child in element:\n",
-    "            tag_dict = {}\n",
-    "            colon = child.get('k').find(':')\n",
-    "            if (child.tag == 'tag'):\n",
-    "                tag_dict['id'] = element.get('id')\n",
-    "                tag_dict['value'] = child.get('v')\n",
-    "                if (colon != -1):\n",
-    "                    type_value = child.get('k')[:colon]\n",
-    "                    key_value = child.get('k')[colon+1:]\n",
-    "                    tag_dict['type'] = type_value\n",
-    "                    tag_dict['key'] = key_value\n",
-    "                else:\n",
-    "                    tag_dict['key'] = child.get('k')\n",
-    "                    tag_dict['type'] = 'regular'\n",
-    "                tags.append(tag_dict)\n",
-    "        return {'node': node_attribs, 'node_tags': tags}\n",
-    "    elif element.tag == 'way':\n",
-    "        for item in WAY_FIELDS:\n",
-    "            way_attribs[item] = element.get(item)\n",
-    "            \n",
-    "        n = 0\n",
-    "        for child in element:\n",
-    "            if child.tag == 'nd':\n",
-    "                nd_dict = {}\n",
-    "                nd_dict['id'] = element.get('id')\n",
-    "                nd_dict['node_id'] = child.get('ref')\n",
-    "                nd_dict['position'] = n\n",
-    "                n += 1\n",
-    "                way_nodes.append(nd_dict)\n",
-    "            \n",
-    "            if (child.tag == 'tag'):\n",
-    "                way_tag_dict = {}\n",
-    "                colon = child.get('k').find(':')\n",
-    "                way_tag_dict['id'] = element.get('id')\n",
-    "                way_tag_dict['value'] = child.get('v')\n",
-    "                if (colon != -1):\n",
-    "                    type_value = child.get('k')[:colon]\n",
-    "                    key_value = child.get('k')[colon+1:]\n",
-    "                    way_tag_dict['type'] = type_value\n",
-    "                    way_tag_dict['key'] = key_value\n",
-    "                else:\n",
-    "                    way_tag_dict['key'] = child.get('k')\n",
-    "                    way_tag_dict['type'] = 'regular'\n",
-    "                tags.append(way_tag_dict)\n",
-    "                \n",
-    "        return {'way': way_attribs, 'way_nodes': way_nodes, 'way_tags': tags}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "OSM_PATH = \"example.osm\"\n",
+    "street_mapping = {\n",
+    "    'Ave': 'Avenue',\n",
+    "    'Ave.': 'Avenue',\n",
+    "    'St': 'Street',\n",
+    "    'St.': 'Street',\n",
+    "    'Ln': 'Lane',\n",
+    "    'Dr': 'Drive',\n",
+    "    'Ct': 'Court' \n",
+    "}\n",
     "\n",
     "NODES_PATH = \"nodes.csv\"\n",
     "NODE_TAGS_PATH = \"nodes_tags.csv\"\n",
@@ -535,48 +385,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 205,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def process_map(file_in, validate):\n",
-    "    \"\"\"Iteratively process each XML element and write to csv(s)\"\"\"\n",
+    "%run audit-v-value.py\n",
     "\n",
-    "    with codecs.open(NODES_PATH, 'w') as nodes_file, \\\n",
-    "         codecs.open(NODE_TAGS_PATH, 'w') as nodes_tags_file, \\\n",
-    "         codecs.open(WAYS_PATH, 'w') as ways_file, \\\n",
-    "         codecs.open(WAY_NODES_PATH, 'w') as way_nodes_file, \\\n",
-    "         codecs.open(WAY_TAGS_PATH, 'w') as way_tags_file:\n",
     "\n",
-    "        nodes_writer = UnicodeDictWriter(nodes_file, NODE_FIELDS)\n",
-    "        node_tags_writer = UnicodeDictWriter(nodes_tags_file, NODE_TAGS_FIELDS)\n",
-    "        ways_writer = UnicodeDictWriter(ways_file, WAY_FIELDS)\n",
-    "        way_nodes_writer = UnicodeDictWriter(way_nodes_file, WAY_NODES_FIELDS)\n",
-    "        way_tags_writer = UnicodeDictWriter(way_tags_file, WAY_TAGS_FIELDS)\n",
     "\n",
-    "        nodes_writer.writeheader()\n",
-    "        node_tags_writer.writeheader()\n",
-    "        ways_writer.writeheader()\n",
-    "        way_nodes_writer.writeheader()\n",
-    "        way_tags_writer.writeheader()\n",
-    "\n",
-    "        validator = cerberus.Validator()\n",
-    "\n",
-    "        for element in get_element(file_in, tags=('node', 'way')):\n",
-    "            el = shape_element(element)\n",
-    "            if el:\n",
-    "                if validate is True:\n",
-    "                    validate_element(el, validator)\n",
-    "\n",
-    "                if element.tag == 'node':\n",
-    "                    nodes_writer.writerow(el['node'])\n",
-    "                    node_tags_writer.writerows(el['node_tags'])\n",
-    "                elif element.tag == 'way':\n",
-    "                    ways_writer.writerow(el['way'])\n",
-    "                    way_nodes_writer.writerows(el['way_nodes'])\n",
-    "                    way_tags_writer.writerows(el['way_tags'])"
+    "process_map(sample_file)"
    ]
   },
   {
