docs: Update the documentation for 'generate the csv file' section

--- a/Wrangle-OpenStreetMap-Data/OpenStreetMap+Project+-+Chicago.ipynb
+++ b/Wrangle-OpenStreetMap-Data/OpenStreetMap+Project+-+Chicago.ipynb
@@ -313,85 +313,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Fix the problems\n",
+    "## Generate the csv files\n",
     "\n",
-    "We have audited the Chicago osm file, and it is time to clean it.\n",
+    "We have audited the Chicago osm file, and it is time to clean it and generate the csv files we need.\n",
     "\n",
     "Based on the previous analysis, there is no problematic characters within 'k' attributes. I will not update this part.\n",
     "\n",
-    "The street type is inconsistent. There are many abbreviations inside. I will creating a mapping to update these parts."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "street_mapping = {\n",
-    "    'Ave': 'Avenue',\n",
-    "    'Ave.': 'Avenue',\n",
-    "    'St': 'Street',\n",
-    "    'St.': 'Street',\n",
-    "    'Ln': 'Lane',\n",
-    "    'Dr': 'Drive',\n",
-    "    'Ct': 'Court' \n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "fix_street_errors()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 195,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "NODE_FIELDS = ['id', 'lat', 'lon', 'user', 'uid', 'version', 'changeset', 'timestamp']\n",
-    "NODE_TAGS_FIELDS = ['id', 'key', 'value', 'type']\n",
-    "WAY_FIELDS = ['id', 'user', 'uid', 'version', 'changeset', 'timestamp']\n",
-    "WAY_TAGS_FIELDS = ['id', 'key', 'value', 'type']\n",
-    "WAY_NODES_FIELDS = ['id', 'node_id', 'position']\n",
+    "The street type is inconsistent. There are many abbreviations inside. I will creating a mapping to update these parts.\n",
     "\n",
-    "street_mapping = {\n",
-    "    'Ave': 'Avenue',\n",
-    "    'Ave.': 'Avenue',\n",
-    "    'St': 'Street',\n",
-    "    'St.': 'Street',\n",
-    "    'Ln': 'Lane',\n",
-    "    'Dr': 'Drive',\n",
-    "    'Ct': 'Court' \n",
-    "}\n",
-    "\n",
-    "NODES_PATH = \"nodes.csv\"\n",
-    "NODE_TAGS_PATH = \"nodes_tags.csv\"\n",
-    "WAYS_PATH = \"ways.csv\"\n",
-    "WAY_NODES_PATH = \"ways_nodes.csv\"\n",
-    "WAY_TAGS_PATH = \"ways_tags.csv\""
+    "There are only six phone numbers that have format issues. It is too little compared to the whole datasets. Therefore, I will not clean them."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
     "%run audit-v-value.py\n",
-    "\n",
-    "\n",
     "\n",
     "process_map(sample_file)"
    ]
